flask with connexion & SQLalchemy running

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -18,9 +18,11 @@ disable-logging = true               ; Disable built-in logging
 ;log-5xx = true                       ; and 5xx's
 
 ; static - don't touch!
-chdir = /var/www/app/app
-mount = /var/www/app/=wsgi.py
+chdir = /var/www/app
+mount = /api=api/run.py
 pythonpath = /var/www/app
+pythonpath = /usr/local/lib/python3.7
+pythonpath = /usr/local/lib/python3.7/dist-packages
 pythonpath = /usr/local/lib/python3.7/site-packages
 uid = www-data
 gid = www-data
