--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ version: '3'
 
 services:
   db:
+    # compatibility to Google Cloud SQL (PostgreSQL Version 9.6 supported)
     image: postgis/postgis:9.6-2.5-alpine
     restart: unless-stopped
+    # code first: database will be created from python models
+    # alternatively one could create it via SQL with the following
     #volumes:
       #- ./db/V_01_create_all.sql:/docker-entrypoint-initdb.d/1_V_01_create_all.sql
       #- ./db/sample_data.sql:/docker-entrypoint-initdb.d/2_sample_data.sql
@@ -17,7 +20,6 @@ services:
 
   api:
     build: .
-    #image: krisenheldin:latest
     volumes:
       - .:/app
     # host machine :6060 -> container port 8080 (NGINX) -> uwsgi app
@@ -32,5 +34,3 @@ services:
       - "6060:8080"
     depends_on:
      - db
-    # populate test data
-    #command: bash -c "/usr/bin/env python3 api/init_database.py"
